--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18.16.19",
-    "nuxt": "^3.6.2"
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.2.1",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "nuxt": "^3.6.2",
+    "postcss": "^8.4.25"
+  },
+  "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.8.0"
   }
 }
